--- a/src/components/game.scss
+++ b/src/components/game.scss
@@ -6,6 +6,30 @@ body {
   box-sizing: border-box;
 }
 
+.rotate-device {
+  display: block;
+  position: fixed;
+  text-align: center;
+  color: #ffffff;
+  font-size: 2.2vh;
+  margin: 10px;
+  min-width: 300px;
+  max-width: 400px;
+}
+
+main {
+
+  text-align: center;
+  background-image: url(../../media/img/sabana.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 580px;
+  min-width: max-content;
+  padding-bottom: 2%;
+  padding-top: 2%;
+  margin: 0 auto;
+}
+
 .root {
   min-height: max-content;
   min-width: max-content;
@@ -24,18 +48,7 @@ body {
   ;
 }
 
-main {
 
-  text-align: center;
-  background-image: url(../../media/img/sabana.jpg);
-  background-size: cover;
-  background-position: bottom center;
-  min-height: 900px;
-  min-width: max-content;
-  padding-bottom: 2%;
-  padding-top: 2%;
-  margin: 0 auto;
-}
 
 
 .infoBox {
