--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -5,9 +5,8 @@ footer {
   background: linear-gradient(to bottom, rgb(34, 1, 1) 0%, rgb(21, 1, 1) 50%, rgba(0, 0, 0, 0.952) 100%);
   height: 200px;
   margin-top: 0px;
-
   font-size: 14px;
-  color: #666;
+  color: #ccc3c3;
 
 
 }
