--- a/src/components/game.scss
+++ b/src/components/game.scss
@@ -1,3 +1,8 @@
+@import '../mixins/mixins.scss';
+
+$color: #ffffff;
+
+
 html,
 body {
   margin: 0;
@@ -10,7 +15,7 @@ body {
   display: block;
   position: fixed;
   text-align: center;
-  color: #ffffff;
+  color: $color;
   font-size: 2.2vh;
   margin: 10px;
   min-width: 300px;
@@ -18,21 +23,22 @@ body {
 }
 
 main {
-
   text-align: center;
   background-image: url(../../media/img/sabana.jpg);
   background-size: cover;
   background-position: center;
-  min-height: 580px;
-  min-width: max-content;
   padding-bottom: 2%;
   padding-top: 2%;
   margin: 0 auto;
+
+  @include for-size(mobile) {
+    min-height: 100vh;
+    width: 100%;
+  }
+
 }
 
 .root {
-  min-height: max-content;
-  min-width: max-content;
   background-color: #2f2e2e;
   color: #686767;
   text-align: center;
@@ -40,47 +46,57 @@ main {
 }
 
 .container {
-  display: flex;
+  @include basic-flexbox;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   margin-bottom: 2%;
-  ;
 }
 
-
-
-
 .infoBox {
-
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  max-width: 50%;
-  min-width: 50%;
-  margin: 0 auto;
-  margin-bottom: 1%;
-  padding-bottom: 15px;
-  color: #ffffff;
+  gap: 10px;
+  margin: 0%auto;
+  padding: 10px;
+  color: $color;
   background-color: #2f2e2e9b;
   border: 1px solid #f89204;
   border-radius: 5px;
   font-size: 22px;
   box-shadow: 0 0 10px #f3ae0f;
 
+
+  @include for-size(mobile) {
+    max-width: 51%;
+  }
+
+  @include for-size(desktop) {
+    max-width: 23%;
+  }
+
   p {
-    color: #ffffff;
     text-shadow: 0 0 10px #f9f9f7;
+  }
+
+  #levelSelect {
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-shadow: 0px 0px 3px #f89204;
+    border-radius: 5px;
+    padding: 2px;
+    background-color: #f7ce2b;
+    text-align: center;
+    font-size: 1rem;
   }
 }
 
 
 .info {
   font-size: 22px;
-  margin: 0;
+  margin: 2%;
   padding: 0;
-  color: #ffffff;
   text-shadow: 0 0 10px #f9f9f7;
 }
 
@@ -102,9 +118,9 @@ main {
   padding: 0;
   max-width: 50%;
   min-width: 50%;
-
   font-size: 24px;
-  color: #ffffff;
+  font-weight: bold;
+  color: $color;
   text-shadow: 0 0 10px #f9f9f7;
 
 }
