--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,14 +1,25 @@
+@import '../../mixins/mixins.scss';
+
 header {
-  min-width: 100%;
+  @include basic-flexbox;
   margin: 0;
+  min-width: 100%;
   height: 200px;
   background-color: #0d0301df;
   line-height: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
 
+  @include for-size(mobile) {
+    height: 300px;
+    line-height: 3rem;
+    text-align: center;
+  }
+
+  @include for-size(tablet) {
+    height: 300px;
+    line-height: 3rem;
+    text-align: center;
+  }
 
   h1 {
     color: #e1861ff5;
