--- a/src/views/finalView.scss
+++ b/src/views/finalView.scss
@@ -1,50 +1,27 @@
+@import '../mixins/mixins.scss';
+
 .loseViewContainer,
 .winViewContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include basic-flexbox;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   font-size: 30px;
+  background-color: rgba(210, 181, 250, 0.25);
 }
 
 .loseViewContent {
-  display: flex;
-  top: 10%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #f0ece3;
-  width: 500px;
-  height: 500px;
-  min-height: 400px;
-  margin: 0 auto;
+  @include finalView;
   background-color: #ef5526;
   border: 2px solid #f89204;
-  border-radius: 5px;
   box-shadow: 0 0 10px #f3ae0f;
-  opacity: .8;
 }
 
 .winViewContent {
-  display: flex;
-  position: relative;
-  top: 7%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #e9eee9;
-  width: 500px;
-  width: 500px;
-  min-height: 400px;
-  margin: 0 auto;
+  @include finalView;
   background-color: #0b7b20ed;
   border: 2px solid #f89204;
-  border-radius: 5px;
   box-shadow: 0 0 10px #f3ae0f;
-  opacity: .8;
-
 }
