--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,12 +1,11 @@
+@import '../../mixins/mixins.scss';
+
 footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include basic-flexbox;
   background: linear-gradient(to bottom, rgb(34, 1, 1) 0%, rgb(21, 1, 1) 50%, rgba(0, 0, 0, 0.952) 100%);
   height: 200px;
   margin-top: 0px;
   font-size: 14px;
+  text-decoration: underline;
   color: #ccc3c3;
-
-
 }
