--- a/src/components/game.scss
+++ b/src/components/game.scss
@@ -37,6 +37,7 @@ main {
 
   @include for-size(mobile) {
     min-height: 100vh;
+    height: 100%;
     width: 100%;
   }
 
@@ -73,7 +74,7 @@ main {
   }
 
   @include for-size(desktop) {
-    max-width: 32%;
+    max-width: 25%;
   }
 
   p {
